# zhihu-salt-novel-downloader

./: .gitignore  DESIGN.md  Dockerfile  Dockerfile.build-windows  README.md  build_linux.sh  build_windows.bat  cli.py  config.yaml  disclaimer.py  docker-compose.yml  main.py  pyinstaller.spec  pyproject.toml  requirements.txt
.github/workflows/: build-tauri.yml  build-windows.yml
auth/: __init__.py  cookie_manager.py  user_agent.py
core/: __init__.py  cache.py  downloader.py  rate_limiter.py
docs/openapi/: v3.yaml
exporters/: __init__.py  base_exporter.py  epub_exporter.py  md_exporter.py  txt_exporter.py
parsers/: __init__.py  article_parser.py  chapter_classifier.py
scripts/: build-desktop.sh  build-windows-exe.sh  dev.sh  generate_tauri_icons.py
src/zhihu_downloader/: __init__.py  __main__.py  cli.py
src/zhihu_downloader/api/: __init__.py  app.py  dependencies.py  errors.py  main.py  schemas.py  tasks.py
src/zhihu_downloader/api/routers/: __init__.py  api_keys.py  auth.py  books.py  download.py  plugins.py  shelf.py  users.py
src/zhihu_downloader/auth/: __init__.py  api_key_manager.py  browser_cookie.py  cookie_manager.py  jwt_auth.py  rate_limiter.py  user_agent.py
src/zhihu_downloader/core/: __init__.py  cache.py  circuit_breaker.py  downloader.py  proxy_pool.py  rate_limiter.py  ua_rotator.py
src/zhihu_downloader/exporters/: __init__.py  base_exporter.py  epub_exporter.py  md_exporter.py  mobi_exporter.py  txt_exporter.py
src/zhihu_downloader/infra/: __init__.py  database.py  models.py  repository.py
src/zhihu_downloader/observability/: metrics.py  otel_config.py  tracing.py
src/zhihu_downloader/parsers/: __init__.py  article_parser.py  chapter_classifier.py
src/zhihu_downloader/plugins/: __init__.py  manager.py  protocol.py  specs.py
src/zhihu_downloader/plugins/exporters/: epub_exporter.py  md_exporter.py  mobi_exporter.py  txt_exporter.py
src/zhihu_downloader/plugins/sources/: zhihu_salt.py
src/zhihu_downloader/services/: __init__.py  download_service.py  events.py  shelf_service.py
src/zhihu_downloader/shelf/: __init__.py  shelf_manager.py
src/zhihu_downloader/tasks/: nats_queue.py  state_machine.py  task_manager.py
src/zhihu_downloader/utils/: __init__.py  checkpoint.py  config.py  content_cleaner.py  logging_setup.py  retry.py  security.py  trace_context.py
tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_checkpoint.py  test_cookie.py  test_core.py  test_downloader.py  test_exporters.py  test_infra.py  test_parsers.py  test_services.py  test_sources.py
utils/: __init__.py  checkpoint.py  config.py  content_cleaner.py  exceptions.py  monitoring.py  retry.py
web/: .env  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: backend.rs  commands.rs  error.rs  lib.rs  main.rs
web/src/api/: auth.ts  client.ts  download.ts  index.ts  plugins.ts  shelf.ts
web/src/components/: ConfigPanel.tsx  DownloadPanel.tsx  ErrorBoundary.tsx  Layout.tsx  StatusBar.tsx
web/src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  select.tsx  separator.tsx  textarea.tsx  toaster.tsx
web/src/hooks/: queries.ts  useDownloadProgress.ts  useTauri.ts  useTheme.ts
web/src/i18n/: index.ts
web/src/lib/: api.ts  queryClient.ts  tauri.ts  utils.ts
web/src/pages/: DownloadPage.tsx  HomePage.tsx  LibraryPage.tsx  SettingsPage.tsx  TasksPage.tsx
web/src/store/: appStore.ts  authStore.ts  index.ts
web/src/types/: index.ts
